--- a/src/s/general.css
+++ b/src/s/general.css
@@ -10,10 +10,16 @@
 	display: none !important;
 }
 
+#map {
+	width: 100%;
+	height: 100%
+}
+
 #place-view {
 	background: url(./../i/map.png) 0 0 no-repeat;
 	width: 100%;
 	height: 100%;
+	margin: 4.5em auto;
 	zoom: 1;
 }
 
