And finally - added the labels and got the rest of functionality

--- a/src/s/general.css
+++ b/src/s/general.css
@@ -17,7 +17,14 @@ body {
 
 #map {
 	width: 100%;
-	height: 100%
+	height: 100%;
+	overflow: hidden;
+}
+
+#label {
+	margin: auto;
+	width: 100%;
+	height: 100%;
 }
 
 #place-view {
@@ -48,3 +55,4 @@ div.visible {
 .visible {
 	display: inline;
 }
+
