--- a/src/s/general.css
+++ b/src/s/general.css
@@ -10,6 +10,10 @@ body {
 	background-color: silver;
 }
 
+li {
+	list-style-type: square;
+}
+
 /* hidden information, javascript use - this is supposed to be always hidden */
 #survey-labels {
 	display: none !important;
@@ -31,7 +35,7 @@ body {
 	background: url(./../i/map.png) 0 0 no-repeat;
 	width: 100%;
 	height: 100%;
-	margin: 4.5em auto;
+	margin: 2.8em auto;
 	zoom: 1;
 }
 
@@ -56,3 +60,52 @@ div.visible {
 	display: inline;
 }
 
+/* and finally - font-definitions */
+
+/* cyrillic-ext */
+@font-face {
+  font-family: 'Andika';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Andika'), url(http://fonts.gstatic.com/s/andika/v6/Wav9Vgl9IRoV-aOEDH24MfesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+}
+/* cyrillic */
+@font-face {
+  font-family: 'Andika';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Andika'), url(http://fonts.gstatic.com/s/andika/v6/duDXp9Vh61DhcoRoQdOLKvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Andika';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Andika'), url(http://fonts.gstatic.com/s/andika/v6/fgsBU0qS_anaa-UmGCEdwvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Andika';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Andika'), url(http://fonts.gstatic.com/s/andika/v6/RGsZ12rk7dwkuHvJ9HP_UvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
+/* font-declarations */
+
+* {
+	font-family: Andika;
+	font-size: 100%;
+}
+
+h1 {
+	font-size: 117%;
+}
+
+h2 {
+	font-size: 112%;
+}
